# personify

./: README.md
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py  constants.py  ruff.toml
backend/app/routes/: get.py  post.py
backend/app/services/: ai.py  scraper.py
backend/app/utils/: model_config.py  response.py
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/LoadingScreen/: LoadingScreen.tsx
frontend/src/components/URLInputForm/: URLInputForm.tsx
frontend/src/components/ui/: input.tsx
